WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142952
Fix DO_PROPERTYMAP_CONSTENCY_CHECK enabled build
https://bugs.webkit.org/show_bug.cgi?id=142952
Summary
Fix DO_PROPERTYMAP_CONSTENCY_CHECK enabled build
Joseph Pecoraro
Reported
2015-03-22 17:32:11 PDT
* SUMMARY Build error if you enable DO_PROPERTYMAP_CONSTENCY_CHECK. Also move the #if/#else blocks significantly closer together.
Attachments
[PATCH] Proposed Fix
(2.16 KB, patch)
2015-03-22 17:37 PDT
,
Joseph Pecoraro
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-03-22 17:37:10 PDT
Created
attachment 249209
[details]
[PATCH] Proposed Fix Enabled this and ran all LayoutTests/js tests in a Debug build ran with no asserts.
WebKit Commit Bot
Comment 2
2015-03-22 17:38:43 PDT
Attachment 249209
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/Structure.cpp:1206: One space before end of line comments [whitespace/comments] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 3
2015-03-22 21:16:05 PDT
Comment on
attachment 249209
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=249209&action=review
> Source/JavaScriptCore/runtime/Structure.cpp:1206 > +#endif// DO_PROPERTYMAP_CONSTENCY_CHECK
Style: Oops. I can update this when landing.
Geoffrey Garen
Comment 4
2015-03-23 10:56:38 PDT
Comment on
attachment 249209
[details]
[PATCH] Proposed Fix r=me
Joseph Pecoraro
Comment 5
2015-03-23 13:50:15 PDT
http://trac.webkit.org/changeset/181867
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug