Fix DO_PROPERTYMAP_CONSTENCY_CHECK enabled build https://bugs.webkit.org/show_bug.cgi?id=142952

Reviewed by Geoffrey Garen.

* runtime/Structure.cpp:
(JSC::PropertyTable::checkConsistency):
The check offset method doesn't exist in PropertyTable, it exists in Structure.

(JSC::Structure::checkConsistency):
So move it here, and always put it at the start to match normal behavior.

Canonical link: https://commits.webkit.org/160995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181867 268f45cc-cd09-0410-ab3c-d52691b4dbfc